<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABDEFA"
    tools:context=".ViewQuestion1">


    <ImageView
        android:id="@+id/imgViewHola"
        android:layout_width="361dp"
        android:layout_height="200dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-50dp"

        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/hola" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="50dp"
        app:cardBackgroundColor="#DEF3FC">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/titleQuestion12"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            app:chipSpacingVertical="80dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:text="@string/cbxSi"
                android:textAlignment="center"
                android:textSize="24sp"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipBackgroundColor="@color/chip_background_color"
                app:chipIcon="@drawable/ic_check"
                app:checkedIcon="@drawable/ic_check"
                app:chipStrokeColor="#54B5A6"
                app:chipStrokeWidth="2dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                app:chipBackgroundColor="@color/chip_background_color"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginBottom="50dp"
                android:text="@string/cbxNo"
                android:textAlignment="center"
                android:textSize="24sp"
                app:chipIcon="@drawable/ic_baseline_clear_24"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                app:chipStrokeColor="#54B5A6"
                app:checkedIcon="@drawable/ic_baseline_clear_24"
                app:chipStrokeWidth="2dp" />


        </com.google.android.material.chip.ChipGroup>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSiguienteEscala12"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_below="@id/cardView"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnSiguiente"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>