<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABDEFA"
    tools:context=".ViewQuestion1">


    <ImageView
        android:id="@+id/imgViewHola"
        android:layout_width="361dp"
        android:layout_height="200dp"
        android:layout_marginStart="-50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-50dp"

        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/hola" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="50dp"
        app:cardBackgroundColor="#DEF3FC">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/escala1"
            android:textSize="19dp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            app:singleSelection="true">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center"
                android:textSize="20sp" />


        </RadioGroup>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSiguientePregunta2"
        android:layout_width="207dp"
        android:layout_height="43dp"
        android:layout_below="@id/cardView"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/btnSiguiente"
        tools:ignore="TextContrastCheck" />
</RelativeLayout>